5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1578_1331.log
== TEST (2019-03-25 19:10:48) 
-- CODE:
g=3
m=50
r=m/g
i=50%
-- ERROR:
File "XXXX", line 4
    i=50%
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:12) 
-- CODE:
g=3
m=50
r=m/g
i=m%g
-- ERROR:
File "XXXX", line 4
    i=50%
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:15) 
-- CODE:
g=3
m=50
r=m/g
i=m%g
-- ERROR:
File "XXXX", line 4
    i=50%
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:11:17) 
-- CODE:
g=3
m=50
r=m/g
i=m%g
-- ERROR:
File "XXXX", line 4
    i=50%
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:05) 
-- CODE:
g=3
m=50
r=m/g
i=m%g
print(r)
print(i)
-- OUTPUT:
16.666666666666668
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:13:12) 
-- CODE:
g=3
m=50
r=m/g
i=m%g
print(r)
print(i)
-- EXECUTION TIME:
0.150518
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:13:25) 
-- CODE:
g=3
m=50
r=m//g
i=m%g
print(r)
print(i)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:13:27) 
-- CODE:
g=3
m=50
r=m//g
i=m%g
print(r)
print(i)
-- EXECUTION TIME:
0.191874
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
